K8S/ingress/nginx/resource-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource-backend
  # annotations:
  #   kubernetes.io/ingress.class: nginx # v1.18已废弃，由ingressClassName替代
spec:
  defaultBackend:
    resource:
      apiGroup: k8s.example.com
      kind: StorageBucket
      name: static-assets
  rules:
    - http:
        paths:
          - path: /icons
            pathType: ImplementationSpecific
            backend:
              resource: # 资源后端与服务后端是互斥的
                apiGroup: k8s.example.com
                kind: StorageBucket
                name: icon-assets
